nixos system: add ripgrep neovim init.lua: add 2 themes (tokyonight + catppuccin) install script: fixed a mkdir being the wrong dir

--- a/install
+++ b/install
@@ -7,7 +7,7 @@ if [[ $1 == "--replace-existing" ]]
 then
     echo "Replacing existing files..."
 
-    mkdir ~/.scripts/
+    mkdir ~/.config/
     for FILE in .config/*
     do
         echo "Removing ~/$FILE for replacement."
